media screen desktop e refact código

--- a/public/css/page-landing.css
+++ b/public/css/page-landing.css
@@ -10,32 +10,13 @@
 #container{
   margin: auto;
 
-  width: 90%;
+  width: min(90%, 112rem);
 }
 
-.location, h1, .visit p {
+.location,
+h1,
+.visit p {
   height: 16vh;
-}
-
-.visit a {
-  width: 8rem;
-  height: 8rem;
-  background: #ffd666;
-
-  border: none;
-  border-radius: 3rem;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  margin: auto;
-
-  transition: background .2s;
-}
-
-.visit a:hover {
-  background-color: #96feff;
 }
 
 #logo {
@@ -48,6 +29,7 @@
 
 main h1 {
   animation-delay: 150ms;
+  font-size: clamp(4rem, 8vw, 8.4rem);
 }
 
 .visit p {
@@ -55,5 +37,48 @@ main h1 {
 }
 
 .visit a {
+  width: 8rem;
+  height: 8rem;
+  background: #ffd666;
+  
+  border: none;
+  border-radius: 3rem;
+  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+  margin: auto;
+  
+  transition: background .2s;
   animation-delay: 250ms;
+}
+
+.visit a:hover {
+  background-color: #96feff;
+}
+
+/* desktop version */ 
+@media(min-width: 760px) {
+  header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .location, h1, .visit p {
+    height: initial;
+    text-align: initial;
+  }
+
+  .location {
+    text-align: right;
+  }
+
+  main h1 {
+    
+    font-weight: bold;
+
+    width: min(300px, 80%);
+  }
 }
