--- a/public/css/form.css
+++ b/public/css/form.css
@@ -72,3 +72,17 @@ fieldset legend {
   padding: 1.6rem;
   line-height: 2.8rem;
 }
+
+.input-block.images button {
+  width: 100%;
+  height: 6.4rem;
+
+  background: #F5F8FA;
+  padding: 0 1.6rem;
+  margin-top: 2.4rem;
+  
+  border: 1px dashed #96D2F0;
+  border-radius: 2rem;
+
+  cursor: pointer;
+}
