--- a/public/css/form.css
+++ b/public/css/form.css
@@ -86,3 +86,20 @@ fieldset legend {
 
   cursor: pointer;
 }
+
+.new-upload {
+  position: relative;
+}
+
+.new-upload span {
+  position: absolute;
+  right: 12px;
+  bottom: 14px;
+  background: #FFFFFF;
+  display: flex;
+  border: 1px solid #D3E2E5;
+  border-radius: 10px;
+  padding: .6rem;
+
+  cursor: pointer;
+}
