retirando todos .public e rename lang = pt-br

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt_BR">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
@@ -36,7 +36,7 @@
         <section class="visit">
           <p class="animate-up">Visite orfanatos e mude o dia de muitas crianças</p>
 
-          <a href="orphanages.html" class="animate-up" title="Visite Orfanatos">
+          <a href="/orphanages" class="animate-up" title="Visite Orfanatos">
             <img src="/images/arrow.svg" alt="Ir para o mapa">
           </a>
         </section>
