mudando de RJ => SC

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -25,8 +25,8 @@
           alt="Logotipo Happy">
 
         <div class="location animate-up">
-          <strong>Rio de Janeiro</strong>
-          <p>Rio de Janeiro</p>
+          <strong>Rio do Sul</strong>
+          <p>Santa Catarina</p>
         </div>
       </header>
 
