--- a/src/views/orphanages.hbs
+++ b/src/views/orphanages.hbs
@@ -34,8 +34,8 @@
       </header>
 
       <footer>
-        <strong>Rio de Janeiro</strong>
-        <p>Rio de Janeiro</p>
+        <strong>Rio do Sul</strong>
+        <p>Santa Catarina</p>
       </footer>
     </aside>
 
