method get para post e mostrando no terminal

--- a/src/views/create-orphanage.hbs
+++ b/src/views/create-orphanage.hbs
@@ -43,7 +43,7 @@
 
     <main class="animate-appear with-sidebar">
 
-      <form action="">
+      <form action="save-orphanage" method="post">
         <fieldset>
           <legend>Dados</legend>
 
