inserindo mais um requerimento

--- a/src/views/create-orphanage.hbs
+++ b/src/views/create-orphanage.hbs
@@ -84,6 +84,7 @@
                   name="images" 
                   placeholder="Cole o link da foto aqui" 
                   required
+                  type="url"
                 />
                 <span onclick="deleteField(event)">
                   <img src="/images/remove-file.svg" alt="Remover foto">
